[package]
name = "ai-companion-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ai_companion_py"
crate-type = ["cdylib"]

[dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }
pyo3 = "0.19.0"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tantivy = "0.20.2"
chrono = "0.4.26"
serde = "1.0.164"
serde_json = "1.0.99"
base64 = "0.21.2"
