[package]
name = "ai-companion-py"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ai_companion_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tantivy = "0.21.1"
chrono = "0.4.31"
serde = "1.0.188"
serde_json = "1.0.107"
base64 = "0.21.4"
png = "0.17.10"
